k3s/emptypad/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emptypad
  namespace: emptypad
spec:
  ingressClassName: traefik
  rules:
    - host: emptypad.aneeshmaganti.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emptypad
                port:
                  number: 80
